--- a/frappe_theme/public/less/variables.less
+++ b/frappe_theme/public/less/variables.less
@@ -13,3 +13,6 @@
 
 @blue-btn-background: #7575ff;
 @blue-btn-hover:      #5b5be5;
+
+@screen-sm-min:              768px;
+@screen-xs-max:              (@screen-sm-min - 1);
